fixes a plethora of bugs including copy, spacing, etc

--- a/wp-content/themes/connectIN/styles/components/desktop-menu.css
+++ b/wp-content/themes/connectIN/styles/components/desktop-menu.css
@@ -31,7 +31,7 @@
   }
 
   .menu__contact-bar {
-    padding: 8px 48px 8px 0;
+    padding: 8px 28px 8px 0;
     text-align: right;
     background-color: var(--color-dkblue);
     width: 100%;
@@ -96,7 +96,9 @@
 
 .menu-desktop-menu-container{
   position: relative;
-
+    & #menu-desktop-menu{
+      padding-left: 0;
+    }
     & a{
       text-decoration: none;
       color: var(--color-white);
@@ -113,14 +115,14 @@
       list-style: none;
       padding-top: 10px;
       position: absolute;
-      right: 50px;
+      right: 30px;
       width: 100%;
       text-align: right;
     }
 
     & ul li {
       display: inline-block;
-      padding-left: 50px;
+      padding-left: 30px;
       width: auto;
 
     }
@@ -134,4 +136,6 @@
   color:#646560;
 }.contact-us .menu__contact-us a {
   color:#646560;
+}.wheat-profitability-calculator #menu-item-227 a{
+  color: #646560;
 }
