--- a/wp-content/themes/connectIN/styles/components/navigation.css
+++ b/wp-content/themes/connectIN/styles/components/navigation.css
@@ -32,7 +32,8 @@ body {
   text-align: center;
 
   & .down {
-    margin-left: 15px;
+    margin-left: 5px;
+    margin-right: 30px;
     font-size: 20px;
     position: relative;
     top: -3px;
