--- a/wp-content/themes/connectIN/styles/find-seed-supplier.css
+++ b/wp-content/themes/connectIN/styles/find-seed-supplier.css
@@ -72,7 +72,7 @@
     border-bottom: 2px dotted var(--color-tan);
     padding: 25px;
     margin-bottom: 35px;
-    min-height: 200px;
+    min-height: 230px;
   }
   & a {
     border-bottom: 5px solid var(--color-link);
